--- a/src/app/ui/SettingsDialog.ui
+++ b/src/app/ui/SettingsDialog.ui
@@ -171,7 +171,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>29</number>
+       <number>27</number>
       </property>
       <widget class="QWidget" name="pageEmpty">
        <layout class="QVBoxLayout" name="verticalLayout_2"/>
@@ -227,8 +227,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>419</width>
-                <height>273</height>
+                <width>379</width>
+                <height>207</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_70">
@@ -289,7 +289,7 @@ You can add new images (for ex. missing pages) after project is created with Ins
                </property>
               </widget>
              </item>
-           <item row="0" column="1">
+             <item row="0" column="1">
               <spacer name="horizontalSpacer_19">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
@@ -303,18 +303,18 @@ You can add new images (for ex. missing pages) after project is created with Ins
               </spacer>
              </item>
              <item row="0" column="2" rowspan="2">
-            <widget class="QComboBox" name="language">
-             <property name="maximumSize">
-              <size>
-               <width>200</width>
-               <height>16777215</height>
-              </size>
-             </property>
-             <property name="sizeAdjustPolicy">
-              <enum>QComboBox::AdjustToContents</enum>
-             </property>
-            </widget>
-           </item>
+              <widget class="QComboBox" name="language">
+               <property name="maximumSize">
+                <size>
+                 <width>200</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="sizeAdjustPolicy">
+                <enum>QComboBox::AdjustToContents</enum>
+               </property>
+              </widget>
+             </item>
              <item row="1" column="1" rowspan="2">
               <spacer name="horizontalSpacer_22">
                <property name="orientation">
@@ -330,11 +330,11 @@ You can add new images (for ex. missing pages) after project is created with Ins
              </item>
              <item row="2" column="0">
               <widget class="QLabel" name="lblStyle">
-             <property name="text">
+               <property name="text">
                 <string>Application style:</string>
-             </property>
-            </widget>
-           </item>
+               </property>
+              </widget>
+             </item>
              <item row="2" column="2">
               <widget class="QComboBox" name="cbStyle">
                <property name="sizeAdjustPolicy">
@@ -473,7 +473,7 @@ You can add new images (for ex. missing pages) after project is created with Ins
              <x>0</x>
              <y>0</y>
              <width>432</width>
-             <height>63</height>
+             <height>405</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_51">
@@ -672,8 +672,8 @@ This option allows to increase page view panel size to almost a whole applicatio
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>99</width>
-                <height>2504</height>
+                <width>379</width>
+                <height>486</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_83">
@@ -1156,8 +1156,8 @@ If project was never saved before this will create UnnamedAutoSave.Scantailor fi
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>93</width>
-                <height>945</height>
+                <width>396</width>
+                <height>176</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_57">
@@ -1449,8 +1449,8 @@ Use &quot;Apply To...&quot; dialog to apply changes to a specified range of page
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>91</width>
-                <height>1334</height>
+                <width>396</width>
+                <height>411</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_60">
@@ -1678,8 +1678,8 @@ The dividing line can also be determined/moved automatically or specified manual
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>99</width>
-                <height>981</height>
+                <width>396</width>
+                <height>389</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_96">
@@ -1896,8 +1896,8 @@ The Deviant page on this stage is defined as a page which absolute deskew angle 
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>83</width>
-                <height>1615</height>
+                <width>396</width>
+                <height>383</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_63">
@@ -2129,8 +2129,8 @@ The Deviant page on this stage is defined as a page which content zone square di
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>96</width>
-                <height>1541</height>
+                <width>379</width>
+                <height>285</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_41">
@@ -2405,8 +2405,8 @@ Everything outside page area is highlighted with yellow in page view panel.</str
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>88</width>
-                <height>1348</height>
+                <width>396</width>
+                <height>411</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_68">
@@ -2561,8 +2561,8 @@ The Deviant page on this stage is defined as a page which has no alignment.</str
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>95</width>
-                <height>1191</height>
+                <width>379</width>
+                <height>205</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_90">
@@ -2848,8 +2848,8 @@ The Deviant page on this stage is defined as a page which has no alignment.</str
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>93</width>
-                <height>4389</height>
+                <width>379</width>
+                <height>706</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_89">
@@ -3041,8 +3041,8 @@ The Deviant page on this stage is defined as a page which has no alignment.</str
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>99</width>
-                <height>831</height>
+                <width>396</width>
+                <height>252</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_69">
@@ -3315,8 +3315,8 @@ Unlike the other stages, the &quot;Output&quot; stage becomes available only aft
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>89</width>
-                <height>1070</height>
+                <width>396</width>
+                <height>355</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_74">
@@ -3428,8 +3428,8 @@ Making black and white image from grayscale or color source requires binarizatio
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>80</width>
-                <height>575</height>
+                <width>396</width>
+                <height>372</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_76">
@@ -3534,8 +3534,8 @@ Equalize illumination option normalizes the background color, bringing it to whi
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>95</width>
-                <height>879</height>
+                <width>396</width>
+                <height>372</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_77">
@@ -3653,8 +3653,8 @@ Automatic picture zones detection works well enough, but if the picture merges s
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>88</width>
-                <height>703</height>
+                <width>396</width>
+                <height>411</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_79">
@@ -3751,8 +3751,8 @@ This mask can't be changed directly but only switched on/off. User could also cr
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>88</width>
-                <height>1855</height>
+                <width>396</width>
+                <height>350</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_81">
@@ -3898,8 +3898,8 @@ In case sensitivity parameter is 100% the picture detection algorithm looks for 
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>419</width>
-                <height>321</height>
+                <width>379</width>
+                <height>246</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_73">
@@ -4081,8 +4081,8 @@ As Foreground layer is using binarization to separate content from background it
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>419</width>
-                <height>308</height>
+                <width>396</width>
+                <height>372</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_92">
@@ -4101,7 +4101,7 @@ As Foreground layer is using binarization to separate content from background it
                <item>
                 <widget class="QLabel" name="lblDewarpingDescr">
                  <property name="text">
-                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Dewarping tries to detect and fix distortion of page surface by analyzing lines of text on it. It assumes that the lines should be horizontal.&lt;/p&gt;&lt;p&gt;Automatic, marginal and manual modes are supported.&lt;/p&gt;&lt;p&gt;Try to correct auto distortion model if too skewed - if enabled then some vertical edges of automatically generated distortion model that deviate to more than 2.75 degrees to Y-axis may be treated as invalid and slope is set to sero. That may help in some cases when auto generation of distortion model gives incorrect results.&lt;/p&gt;&lt;p&gt;Try to apply additional deskew after dewarp - we already deskewed our image on one of previous processing stage but sometimes image may get skewed after dewarping. Thus additional attempt to deskew resulting image may be applied. The skew of the image after dewarping is measured and if the angle is more than 2.0 degrees - it's deskewed. There is no controls to tune this automatic deskew, it takes some CPU time and it's not working with automatic dewarping. So use it with &lt;a name=&quot;result_box&quot;/&gt;with caution.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Dewarping tries to detect and fix distortion of page surface by analyzing lines of text on it. It assumes that the lines should be horizontal.&lt;/p&gt;&lt;p&gt;Automatic, marginal and manual modes are supported.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -4126,22 +4126,7 @@ As Foreground layer is using binarization to separate content from background it
           <property name="title">
            <string>Options</string>
           </property>
-          <layout class="QFormLayout" name="formLayout_17">
-           <item row="0" column="0">
-            <widget class="QCheckBox" name="cbTryVertHalfCorrection">
-             <property name="text">
-              <string>Try to correct auto distortion model if too skewed</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QCheckBox" name="cbTryDeskewAfterDewarp">
-             <property name="text">
-              <string>Try to apply additional deskew after dewarp</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
+          <layout class="QFormLayout" name="formLayout_17"/>
          </widget>
         </item>
        </layout>
@@ -4355,8 +4340,8 @@ As Foreground layer is using binarization to separate content from background it
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>103</width>
-                <height>1394</height>
+                <width>396</width>
+                <height>411</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_59">
@@ -4530,8 +4515,6 @@ Debug images are saved as png in temporary folder with unique filenames. These f
   <tabstop>scrollArea_10</tabstop>
   <tabstop>cbForegroundLayerSeparateControl</tabstop>
   <tabstop>scrollArea_19</tabstop>
-  <tabstop>cbTryVertHalfCorrection</tabstop>
-  <tabstop>cbTryDeskewAfterDewarp</tabstop>
   <tabstop>despecklingDefaultsValue</tabstop>
   <tabstop>cbCopyICCProfile</tabstop>
   <tabstop>scrollArea_3</tabstop>
