--- a/src/app/resources/resources.qrc
+++ b/src/app/resources/resources.qrc
@@ -69,5 +69,13 @@
         <file>icons/multi_choice.png</file>
         <file>icons/gimp-reset.png</file>
         <file>images/empty-page.png</file>
+        <file>icons/distortion-none.png</file>
+        <file>icons/distortion-none-selected.png</file>
+        <file>icons/distortion-perspective.png</file>
+        <file>icons/distortion-perspective-selected.png</file>
+        <file>icons/distortion-rotation.png</file>
+        <file>icons/distortion-rotation-selected.png</file>
+        <file>icons/distortion-warp.png</file>
+        <file>icons/distortion-warp-selected.png</file>
     </qresource>
 </RCC>
