--- a/src/app/ui/AboutDialog.ui
+++ b/src/app/ui/AboutDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>About Scan Tailor &quot;Universal&quot;</string>
+   <string>About Scan Tailor &quot;Deviant&quot;</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>true</bool>
@@ -72,7 +72,7 @@
           </font>
          </property>
          <property name="text">
-          <string notr="true">Scan Tailor &quot;Universal&quot;</string>
+          <string notr="true">Scan Tailor &quot;Deviant&quot;</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignBottom|Qt::AlignHCenter</set>
@@ -160,7 +160,7 @@
               <string notr="true">font-weight: bold;</string>
              </property>
              <property name="text">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Lead Developer of &lt;a href=&quot;https://github.com/trufanov-nok/scantailor-universal&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#2980b9;&quot;&gt;Universal&lt;/span&gt;&lt;/a&gt; version&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Lead Developer of &lt;a href=&quot;https://github.com/ImageProcessing-ElectronicPublications/scantailor-deviant&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#2980b9;&quot;&gt;Deviant&lt;/span&gt;&lt;/a&gt; version&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
            </item>
