deskew widget fovPanel: active change options

--- a/src/core/filters/deskew/ui/DeskewOptionsWidget.ui
+++ b/src/core/filters/deskew/ui/DeskewOptionsWidget.ui
@@ -464,6 +464,12 @@ Perspective correction.</string>
           <property name="decimals">
            <number>3</number>
           </property>
+          <property name="minimum">
+           <double>0.001000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>1000.000000000000000</double>
+          </property>
           <property name="singleStep">
            <double>0.010000000000000</double>
           </property>
@@ -477,6 +483,12 @@ Perspective correction.</string>
           <property name="decimals">
            <number>3</number>
           </property>
+          <property name="minimum">
+           <double>0.001000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>1000.000000000000000</double>
+          </property>
           <property name="singleStep">
            <double>0.010000000000000</double>
           </property>
@@ -489,6 +501,12 @@ Perspective correction.</string>
          <widget class="QDoubleSpinBox" name="fovMaxSpinBox">
           <property name="decimals">
            <number>3</number>
+          </property>
+          <property name="minimum">
+           <double>0.001000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>1000.000000000000000</double>
           </property>
           <property name="singleStep">
            <double>0.010000000000000</double>
